# workerxy

./: .dockerignore  .gitignore  CONTRIBUTING.md  DCO.md  DEBUGGING_GUIDE.md  Dockerfile  ENHANCED_DEBUGGING.md  LICENSE.txt  NOTICE.txt  PHASE1_TESTING_GUIDE.md  README.md  ai_helper.py  conda_users_build_helper.md  docker-compose.yml  features_cli.md  initializer.py  mcp_servers.py  net_agent_cli.md  net_deepagent.py  net_lab_mcp_server.py  prompts.py  pyproject.toml  roadmap.md  service_now_changes_helper.py  service_now_incidents_helper.py  verify_final_skills_v2.py  vision.md
a2a_capability/: agents_registry.json  client.py  dhcp_deepagent.py  dns_deepagent.py  implementation_plan.md  middleware.py  net_deepagent_a2a.py  registry_manager.py  server.py  test_a2a_integration.py
custom_middleware/: __init__.py  netpii_middlewares.py  skill_pruning_middleware.py  skills_middleware.py  tool_announcer_middleware.py  tooling_middleware.py  tools_name_mapper.py
custom_middleware/rlm_middleware/: DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  RLM_README.md  example_network_analysis.py  rlm_middleware.py  rlm_middleware_final.py  sample_network_data.json  test_network_devices_1500.json  test_network_scenario.py  test_rlm_basic.py
documentation/: DEBUGGING_GUIDE.md  ENHANCED_DEBUGGING.md  PHASE1_TESTING_GUIDE.md  PLUGINS.md  VAULT_SETUP.md  business_advantages.md  features_cli.md  net_agent_cli.md  network_ui_backend_integration_plan.md  notification_setup.md  roadmap.md
documentation/howtos/: aws_cloud_howto.md  browser_use_howto.md
graphs/: design_interpretor.py
graphs/network_operator/: agent.py  agent_launcher.py  config.py  how_to.md  network_operator.md  prompts.py  state.py  subagent_bridge.py
graphs/network_operator/nodes/: __init__.py  compressor.py  executor.py  planner.py  synthesizer.py
graphs/network_operator/tests/: conftest.py  test_graph.py  test_nodes.py  test_state.py  test_subagent_bridge.py
howtos/: discord_feature_setup.md  rabbitmq_server_setup.md
net_deepagent_cli/: AUTOMATA.md  README.md  __init__.py  __main__.py  agent.py  agents_ui.py  association.py  automata.py  automata_skills_ui.py  cli.py  commands.py  config.py  diagnose.py  drift.py  entrypoint.py  headless.py  loop.py  middleware_manager.py  pyproject.toml  security.py  skill_commands.py  ui.py  vault.py
net_deepagent_cli/communication/: discord_bot.py  discord_feature.md  listener.py  logger.py  notifications.py  schema.py  session.py  slack_bot.py  summariser.py  tools.py
services/: __init__.py  agent_service.py
skills/ansible-for-networks/: SKILL.md
skills/drawio-network-diagram/: SKILL.md
skills/eve-ng-emulator/: SKILL.md
skills/linux-servers-mgmt/references/: advanced-networking.md  containers.md
skills/linux-servers-mgmt/scripts/: security_hardening.sh
skills/linux_servers/: SKILL.md
skills/linux_servers/references/: apache-nginx.md  database.md  monitoring.md
skills/linux_servers/scripts/: health_check.sh
skills/mist-wifi-api/: SKILL.md
skills/network-design-document/: SKILL.md  SKILL_sample.md  skill_config.yaml
skills/network-troubleshooting/: SKILL.md
skills/prisma-sdwan/: SKILL.md
skills/tshark/: SKILL.md
skills/tshark/references/: protocols.md  statistics.md
subagents/: __init__.py  automata_agent.py  net_lab_agent.py  nms_browser_agent.py  prompts.py  service_desk_agent.py  ticket_scout_agent.py
tests/: test_a2a_discovery.py  test_agent_integration.py  test_agents_command.py  test_association_integration.py  test_automata_tools.py  test_bootup_command.py  test_credentials_helper_loading.py  test_design_interpretor.py  test_discord_memory.py  test_discord_reply.py  test_initializer.py  test_llm_factory.py  test_loop_integration.py  test_mcp_archiver.py  test_mcp_credentials_sourcing.py  test_middleware_manager.py  test_models.py  test_net_lab_agent.py  test_net_lab_mcp_server.py  test_netcred_suppressor.py  test_new_session.py  test_pii_pseudonymizer.py  test_retriever_archiver.py  test_service_desk_agent.py  test_service_now_incidents.py  test_session_archiver.py  test_session_persistence.py  test_session_saving.py  test_skill_manager.py  test_skill_pruning_middleware.py  test_skill_system.py  test_third_party_subagent_loader.py  test_ticket_scout_verify.py  test_tool_error_handling.py  test_tool_filtering.py  test_vault_functionality.py  verify_bash.py
tools_helpers/: automata_tools.py  service_now_incidents_helper.py  voice_helper.py
tools_helpers/retriever_archiver/: __init__.py  core.py
ui/: app.py
utils/: __init__.py  ai_helper.py  credentials_helper.py  file_handler.py  llm_provider.py  session_archiver.py  session_manager.py  session_persistence.py  skill_update_prompts.py  skill_updater.py  skill_writer.py  third_party_subagent_loader.py
utils/atlassian/: jira_helper.py
utils/skill_manager/: README.md  __init__.py  api-docs.txt  backup.py  cli.py  creator.py  llm_client.py  models.py  scanner.py  updater.py  validator.py
(+17 files in other folders)
