[project]
name = "workerxy"
version = "0.2.0"
description = "Network agent automation and LangChain-based AI system"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.52.2",
    "paramiko",
    "pydantic",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langgraph",
    "ipython",
    "requests",
    "typing-extensions",
    "deepagents",
    "langchain-mcp-adapters",
    "google-generativeai",
    "trulens-core",
    "trulens-providers-openai",
    "trustcall",
    "mcp",
    "fastmcp",
    "playwright>=1.57.0",
    "apscheduler",
    "chromadb",
    "pypdf2",
    "python-docx",
    "tqdm",
    "rich",
    "langchain-chroma>=1.1.0",
    "langchain-community",
    "langchain-text-splitters",
    "pypdf",
    "aio-pika>=9.0.0",
    "discord.py>=2.3.0",
    "InquirerPy",
    "telnetlib3",
    "eve-ng>=0.2.7",
    "httpx",
]

[project.scripts]
workerxy = "net_deepagent_cli.entrypoint:main"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["*creds*", "*vault*"]

[tool.setuptools]
py-modules = [
    "ai_helper",
    "code_executor",
    "creds",
    "custom_middleware_gpt",
    "design_crunch_tool",
    "local_tools",
    "main",
    "mcp_servers",
    "net_lab_mcp_server",
    "net_deepagent",
    "net_deepagent_old",
    "prompts",
    "service_now_changes_helper",
    "service_now_incidents_helper",
    "snow_creds",
    "test_models",
    "verify_final_skills_v2"
]
